Avoid wrapping Support Vue menu item (#1326)

--- a/themes/vue/source/css/_header.styl
+++ b/themes/vue/source/css/_header.styl
@@ -50,6 +50,7 @@ body.docs
 
 .nav-link
   padding-bottom: 3px
+  white-space: nowrap
   &:hover, &.current
     border-bottom: 3px solid $green
   &.team
